summative.moria.Moria.scala.error
Compilation error:
Moria:7: error: not found: value pickupBaglle
    pickupBaglle();
    ^