summative.moria.Moria.scala.code
// make a u-turn
left(); 
left();
while (!isFacingWall()) {
  forward()
  if (isOverBaggle()) {
    pickupBaglle();
    while (!isOverBaggle()) {
      backward();
    }
    forward();
    dropBaggle();
  }
}
right();
forward();
left();
forward();